Adaptive layout for "homes guests loves". Correction of block "what do we offer": text no longer overlaps itself.

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@ a {
   width: 16.66%;
 }
 .col-3 {
-  width: 25%;
+  width: 295px;
   height: 100%;
 }
 .col-4 {
@@ -262,6 +262,7 @@ input#info-guests {
   font-weight: 400;
   font-size: 24px;
   line-height: 28px;
+  padding-top: 15%;
 }
 
 .row {
@@ -290,19 +291,31 @@ input#info-guests {
 }
 .apartments {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-
+  flex-wrap: wrap;
+  justify-content: space-around;
   padding-top: 105px;
 }
-.homes-icon{
-  height: 97%;
-  width: 97%;
+.homes-icon {
+  height: 295px;
+  width: 295px;
+  margin-top: 10px;
+}
+.arrow {
+  position: absolute;
+  height: 40px;
+  width: 40px;
 }
 .homes-links {
+  position: relative;
+  top: 20px;
   color: #3077C6;
   font-size: 24px;
-  margin: 24px 0;
+}
+.location {
+  position: relative;
+  top: 35px;
+  padding-bottom: 45px;
+  color: #BFBFBF;
 }
 .footer {
   background-color: #10367c;
@@ -347,27 +360,11 @@ input#info-guests {
 li {
   list-style-type: none;
 }
-/*@media all and (max-width: 1200px) {*/
-/*  .homes-links {*/
-/*    font-size: 20px;*/
-/*    margin: 20px 0;*/
-/*  }*/
-/*}*/
-/*@media all and (max-width: 900px){*/
-/*    .homes-links {*/
-/*      font-size: 18px;*/
-/*      margin: 18px 0;*/
-/*    }*/
-/*}*/
 @media all and (max-width: 700px) {
   .row {
     flex-direction: column;
     justify-content: center;
     margin-top: 35px;
-  }
-  .col {
-    width: 100%;
-    margin: 0 auto;
   }
   .link {
     display: none;
@@ -410,7 +407,7 @@ li {
   .caption {
     font-weight: 400;
     font-size: 15px;
-    line-height: 18px;
+    padding-top: 0;
   }
   .container {
     padding: 40px 67px;
@@ -423,20 +420,25 @@ li {
   .homes-links {
     font-size: 12px;
     margin: 12px 0;
+    top: 10px;
+  }
+  .location {
+    font-size: 12px;
+  }
+  .apartments {
+    display: flex;
+    flex-wrap: wrap;
+    padding-top: 30px;
   }
   .homes-icon {
-    width: 50%;
+    height: 156px;
+    width: 156px;
+
   }
   .col-3 {
-    width: 50%;
+    width: 156px;
   }
 }
-/*@media all and (max-width: 500px) {*/
-/*  .homes-links {*/
-/*    font-size: 5px;*/
-/*    margin: 6px 0;*/
-/*  }*/
-/*}*/
 @media all and (max-width: 300px) {
   .footer-content {
     flex-direction: column;
@@ -446,9 +448,5 @@ li {
   }
   .text-title {
     padding: 10px 0;
-  }
-  .homes-links {
-    font-size: 3px;
-    margin: 4px 0;
   }
 }
